src/main/java/dev/tlang/parser/TLangCommonParser.java
// Generated from dev/tlang/parser/TLangCommon.g4 by ANTLR 4.13.0
package dev.tlang.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TLangCommonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, TEXT=20, WS=21, STRING=22, NUMBER=23, COMMENT=24, 
		LINE_COMMENT=25, Helper=26, Tmpl=27, Model=28, Use=29, Expose=30, Func=31, 
		If=32, Else=33, For=34, With=35, In=36, To=37, Until=38, Set=39, Let=40, 
		Impl=41, Ext=42, New=43, Spec=44, Pkg=45, While=46, Do=47, Var=48, Return=49, 
		True=50, False=51, LBRACE=52, RBRACE=53, LPARENT=54, RPARENT=55, LSQUARE=56, 
		RSQUARE=57, INTEPRETED=58, As=59, Sync=60, Init=61, Destroy=62, Future=63, 
		Await=64, Try=65, Catch=66, Finally=67, Continue=68, Break=69, Const=70, 
		Static=71, Getter=72, Setter=73, Factory=74, Constructor=75, Throw=76, 
		Public=77, Private=78, Protected=79, Sealed=80, Abstract=81, Trait=82, 
		Record=83, Singleton=84, ESCAPED_ID=85, WHITE_SPACES=86, ID=87;
	public static final int
		RULE_assignVar = 0, RULE_valueType = 1, RULE_objType = 2, RULE_arrayType = 3, 
		RULE_operation = 4, RULE_operator = 5, RULE_complexValueType = 6, RULE_primitiveValue = 7, 
		RULE_lazyValue = 8, RULE_stringValue = 9, RULE_numberValue = 10, RULE_textValue = 11, 
		RULE_boolValue = 12, RULE_arrayValue = 13, RULE_callObj = 14, RULE_callObjType = 15, 
		RULE_callArray = 16, RULE_callFunc = 17, RULE_curryParams = 18, RULE_setAttribute = 19, 
		RULE_callVariable = 20, RULE_entityValue = 21, RULE_impl = 22, RULE_multiValue = 23, 
		RULE_complexAttribute = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"assignVar", "valueType", "objType", "arrayType", "operation", "operator", 
			"complexValueType", "primitiveValue", "lazyValue", "stringValue", "numberValue", 
			"textValue", "boolValue", "arrayValue", "callObj", "callObjType", "callArray", 
			"callFunc", "curryParams", "setAttribute", "callVariable", "entityValue", 
			"impl", "multiValue", "complexAttribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'='", "'.'", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'_'", "','", "'&'", 
			null, null, null, null, null, null, "'helper'", "'tmpl'", "'model'", 
			"'use'", "'expose'", "'func'", "'if'", "'else'", "'for'", "'with'", "'in'", 
			"'to'", "'until'", "'set'", "'let'", "'impl'", "'ext'", "'new'", "'spec'", 
			"'pkg'", "'while'", "'do'", "'var'", "'return'", "'true'", "'false'", 
			"'{'", "'}'", "'('", "')'", "'['", "']'", "'${'", "'as'", "'sync'", "'init'", 
			"'destroy'", "'future'", "'await'", "'try'", "'catch'", "'finally'", 
			"'continue'", "'break'", "'const'", "'static'", "'getter'", "'setter'", 
			"'factory'", "'constructor'", "'throw'", "'public'", "'private'", "'protected'", 
			"'sealed'", "'abstract'", "'trait'", "'record'", "'singleton'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "TEXT", "WS", "STRING", 
			"NUMBER", "COMMENT", "LINE_COMMENT", "Helper", "Tmpl", "Model", "Use", 
			"Expose", "Func", "If", "Else", "For", "With", "In", "To", "Until", "Set", 
			"Let", "Impl", "Ext", "New", "Spec", "Pkg", "While", "Do", "Var", "Return", 
			"True", "False", "LBRACE", "RBRACE", "LPARENT", "RPARENT", "LSQUARE", 
			"RSQUARE", "INTEPRETED", "As", "Sync", "Init", "Destroy", "Future", "Await", 
			"Try", "Catch", "Finally", "Continue", "Break", "Const", "Static", "Getter", 
			"Setter", "Factory", "Constructor", "Throw", "Public", "Private", "Protected", 
			"Sealed", "Abstract", "Trait", "Record", "Singleton", "ESCAPED_ID", "WHITE_SPACES", 
			"ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TLangCommon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TLangCommonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignVarContext extends ParserRuleContext {
		public Token name;
		public ValueTypeContext type;
		public OperationContext value;
		public TerminalNode Let() { return getToken(TLangCommonParser.Let, 0); }
		public TerminalNode ID() { return getToken(TLangCommonParser.ID, 0); }
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public ValueTypeContext valueType() {
			return getRuleContext(ValueTypeContext.class,0);
		}
		public AssignVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterAssignVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitAssignVar(this);
		}
	}

	public final AssignVarContext assignVar() throws RecognitionException {
		AssignVarContext _localctx = new AssignVarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_assignVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(Let);
			setState(51);
			((AssignVarContext)_localctx).name = match(ID);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(52);
				match(T__0);
				setState(53);
				((AssignVarContext)_localctx).type = valueType();
				}
			}

			setState(56);
			match(T__1);
			setState(57);
			((AssignVarContext)_localctx).value = operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValueTypeContext extends ParserRuleContext {
		public ObjTypeContext objType() {
			return getRuleContext(ObjTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public ValueTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterValueType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitValueType(this);
		}
	}

	public final ValueTypeContext valueType() throws RecognitionException {
		ValueTypeContext _localctx = new ValueTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_valueType);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				objType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				arrayType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjTypeContext extends ParserRuleContext {
		public Token exTpye;
		public Token type;
		public List<TerminalNode> ID() { return getTokens(TLangCommonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TLangCommonParser.ID, i);
		}
		public ObjTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterObjType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitObjType(this);
		}
	}

	public final ObjTypeContext objType() throws RecognitionException {
		ObjTypeContext _localctx = new ObjTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_objType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(63);
				((ObjTypeContext)_localctx).exTpye = match(ID);
				setState(64);
				match(T__2);
				}
				break;
			}
			setState(67);
			((ObjTypeContext)_localctx).type = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayTypeContext extends ParserRuleContext {
		public Token exTpye;
		public Token type;
		public TerminalNode LSQUARE() { return getToken(TLangCommonParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(TLangCommonParser.RSQUARE, 0); }
		public List<TerminalNode> ID() { return getTokens(TLangCommonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TLangCommonParser.ID, i);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterArrayType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitArrayType(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(69);
				((ArrayTypeContext)_localctx).exTpye = match(ID);
				setState(70);
				match(T__2);
				}
				break;
			}
			setState(73);
			((ArrayTypeContext)_localctx).type = match(ID);
			setState(74);
			match(LSQUARE);
			setState(75);
			match(RSQUARE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationContext extends ParserRuleContext {
		public ComplexValueTypeContext content;
		public OperatorContext op;
		public OperationContext next;
		public OperationContext innerBlock;
		public TerminalNode LPARENT() { return getToken(TLangCommonParser.LPARENT, 0); }
		public TerminalNode RPARENT() { return getToken(TLangCommonParser.RPARENT, 0); }
		public ComplexValueTypeContext complexValueType() {
			return getRuleContext(ComplexValueTypeContext.class,0);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public List<OperatorContext> operator() {
			return getRuleContexts(OperatorContext.class);
		}
		public OperatorContext operator(int i) {
			return getRuleContext(OperatorContext.class,i);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operation);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(77);
				((OperationContext)_localctx).content = complexValueType();
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(78);
						((OperationContext)_localctx).op = operator();
						setState(79);
						((OperationContext)_localctx).next = operation();
						}
						} 
					}
					setState(85);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				}
				break;
			case 2:
				{
				setState(86);
				match(LPARENT);
				setState(87);
				((OperationContext)_localctx).content = complexValueType();
				setState(88);
				match(RPARENT);
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(89);
						((OperationContext)_localctx).op = operator();
						setState(90);
						((OperationContext)_localctx).next = operation();
						}
						} 
					}
					setState(96);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			case 3:
				{
				setState(97);
				match(LPARENT);
				setState(98);
				((OperationContext)_localctx).content = complexValueType();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 131056L) != 0)) {
					{
					{
					setState(99);
					((OperationContext)_localctx).op = operator();
					setState(100);
					((OperationContext)_localctx).next = operation();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(RPARENT);
				}
				break;
			case 4:
				{
				setState(109);
				match(LPARENT);
				setState(110);
				((OperationContext)_localctx).innerBlock = operation();
				setState(111);
				match(RPARENT);
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(112);
						((OperationContext)_localctx).op = operator();
						setState(113);
						((OperationContext)_localctx).next = operation();
						}
						} 
					}
					setState(119);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperatorContext extends ParserRuleContext {
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitOperator(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 131056L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComplexValueTypeContext extends ParserRuleContext {
		public CallObjContext callObj() {
			return getRuleContext(CallObjContext.class,0);
		}
		public PrimitiveValueContext primitiveValue() {
			return getRuleContext(PrimitiveValueContext.class,0);
		}
		public MultiValueContext multiValue() {
			return getRuleContext(MultiValueContext.class,0);
		}
		public LazyValueContext lazyValue() {
			return getRuleContext(LazyValueContext.class,0);
		}
		public ImplContext impl() {
			return getRuleContext(ImplContext.class,0);
		}
		public ComplexValueTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexValueType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterComplexValueType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitComplexValueType(this);
		}
	}

	public final ComplexValueTypeContext complexValueType() throws RecognitionException {
		ComplexValueTypeContext _localctx = new ComplexValueTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_complexValueType);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				callObj();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				primitiveValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				multiValue();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				lazyValue();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(128);
				impl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimitiveValueContext extends ParserRuleContext {
		public StringValueContext stringValue() {
			return getRuleContext(StringValueContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public TextValueContext textValue() {
			return getRuleContext(TextValueContext.class,0);
		}
		public EntityValueContext entityValue() {
			return getRuleContext(EntityValueContext.class,0);
		}
		public BoolValueContext boolValue() {
			return getRuleContext(BoolValueContext.class,0);
		}
		public ArrayValueContext arrayValue() {
			return getRuleContext(ArrayValueContext.class,0);
		}
		public PrimitiveValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterPrimitiveValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitPrimitiveValue(this);
		}
	}

	public final PrimitiveValueContext primitiveValue() throws RecognitionException {
		PrimitiveValueContext _localctx = new PrimitiveValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_primitiveValue);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				stringValue();
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				numberValue();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				textValue();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				entityValue();
				}
				break;
			case True:
			case False:
				enterOuterAlt(_localctx, 5);
				{
				setState(135);
				boolValue();
				}
				break;
			case LSQUARE:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				arrayValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LazyValueContext extends ParserRuleContext {
		public LazyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lazyValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterLazyValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitLazyValue(this);
		}
	}

	public final LazyValueContext lazyValue() throws RecognitionException {
		LazyValueContext _localctx = new LazyValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lazyValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringValueContext extends ParserRuleContext {
		public Token value;
		public TerminalNode STRING() { return getToken(TLangCommonParser.STRING, 0); }
		public StringValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterStringValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitStringValue(this);
		}
	}

	public final StringValueContext stringValue() throws RecognitionException {
		StringValueContext _localctx = new StringValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_stringValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			((StringValueContext)_localctx).value = match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberValueContext extends ParserRuleContext {
		public Token value;
		public TerminalNode NUMBER() { return getToken(TLangCommonParser.NUMBER, 0); }
		public NumberValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterNumberValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitNumberValue(this);
		}
	}

	public final NumberValueContext numberValue() throws RecognitionException {
		NumberValueContext _localctx = new NumberValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_numberValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			((NumberValueContext)_localctx).value = match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextValueContext extends ParserRuleContext {
		public Token value;
		public TerminalNode TEXT() { return getToken(TLangCommonParser.TEXT, 0); }
		public TextValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterTextValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitTextValue(this);
		}
	}

	public final TextValueContext textValue() throws RecognitionException {
		TextValueContext _localctx = new TextValueContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_textValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			((TextValueContext)_localctx).value = match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolValueContext extends ParserRuleContext {
		public TerminalNode True() { return getToken(TLangCommonParser.True, 0); }
		public TerminalNode False() { return getToken(TLangCommonParser.False, 0); }
		public BoolValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterBoolValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitBoolValue(this);
		}
	}

	public final BoolValueContext boolValue() throws RecognitionException {
		BoolValueContext _localctx = new BoolValueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_boolValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !(_la==True || _la==False) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayValueContext extends ParserRuleContext {
		public ComplexAttributeContext complexAttribute;
		public List<ComplexAttributeContext> params = new ArrayList<ComplexAttributeContext>();
		public TerminalNode LSQUARE() { return getToken(TLangCommonParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(TLangCommonParser.RSQUARE, 0); }
		public List<ComplexAttributeContext> complexAttribute() {
			return getRuleContexts(ComplexAttributeContext.class);
		}
		public ComplexAttributeContext complexAttribute(int i) {
			return getRuleContext(ComplexAttributeContext.class,i);
		}
		public ArrayValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).enterArrayValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TLangCommonListener ) ((TLangCommonListener)listener).exitArrayValue(this);
		}
	}
